# CompareContractOffers

./: .gitignore  DownloadModel.py  Offertevergelijker.spec  ReadMe.md  installer-setup.iss  pyproject.toml  version.txt
src/: AIWorker.py  Application.py  DataHandler.py  Exporter.py  Matcher.py  Test.py  UserMatching.py  app.py  gen-mock-files.py  test.py
src/Backend/: scoring.py  textprocessing.py
src/Compare/: loader.py  scoring.py  textprocessing.py
src/Contracts/: compare.py  preprocessing.py  scoring.py  textprocessing.py
src/UI/: BaseCluster.py  Cluster.py  Compare.py  Controls.py  DragDropList.py  DraggableItemList.py  MatchItem.py  Matching.py  ParkingLot.py  Product.py  ProductLabel.py  Settings.py  TabManager.py  Unmatched.py  Utils.py
src/UI/DataModel/: ComparisonTab.py  DataTable.py  DocumentTab.py  PreviewTab.py  ReportGenerator.py
src/UI/DataModels/: MatchingEngine.py  ReportGenerator.py
src/UI/DataProcessing/: DataNormaliser.py  ExcelExporter.py  MatchingEngine.py  ReportGenerator.py
src/UI/DataRepresentation/: ComparisonTab.py  DataTable.py  DocumentTab.py  DynamicTable.py  PreviewTab.py  Shortcut.py
src/UI/ManualMatching/: BaseCluster.py  Cluster.py  ClusterTooltip.py  DraggableItemList.py  ItemTooltip.py  MatchItem.py  ProductItem.py  Unmatched.py
