[project]
name = "comparecontractoffers"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub[hf-xet]>=0.36.0",
    "nltk>=3.9.4",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "pyside6>=6.10.2",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.2.3",
    "torch>=2.10.0",
    "xlsxwriter>=3.2.9",
]
