[project]
name = "comparecontractoffers"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "nltk>=3.9.4",
    "numpy>=2.4.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pyside6>=6.10.2",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.4.1",
    "torch>=2.11.0",
    "xlsxwriter>=3.2.9",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[dependency-groups]
dev = [
    "pyinstaller>=6.20.0",
]
